# docs/swagger.yaml
@@ -37,10 +37,6 @@ definitions:
         type: integer
       page_size:
         type: integer
-      total:
-        type: integer
-      total_pages:
-        type: integer
     type: object
   Status:
     properties:
